Implementing view for trainee dashboard

--- a/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
@@ -5,7 +5,7 @@
 }
 
 <style>
-			    .delete-icon {
+	.delete-icon {
         color: red;
         font-size: x-large;
     }
@@ -35,7 +35,7 @@
     <thead>
 <tr class="text-center">
 			<th >S.No</th>
-			<th>@Html.DisplayNameFor(model => model.Name)</th>
+			<th class="w-75">Batch</th>
 			<th colspan="2">
 				Actions
 			</th>
