--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -10,7 +10,7 @@
     <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
 </div>
 <table class="table table-hover table-bordered">
-    <tr>
+    <tr class="text-center">
         <th>S.No</th>
         <th>First Name</th>
         <th>Last Name</th>
@@ -39,9 +39,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Qualification)
             </td>
-            <td>
+            <td class="text-center">
                 <a onclick="GetUser(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
-                <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+                </td>
+                <td class="text-center">
+                <a data-id-to-delete="@item.Id"  data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
             </td>
         </tr>
         Count += 1;
