--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
@@ -5,6 +5,15 @@
 }
 
 <style>
+    			    .delete-icon {
+        color: red;
+        font-size: x-large;
+    }
+
+    .edit-icon {
+        color: #00239B;
+        font-size: x-large;
+    }
     .btn-add-gradient {
         background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
         border-radius: 4px;
@@ -25,7 +34,7 @@
     <thead>
         <tr class="text-center">
             <th>S.No</th>
-            <th>Stream</th>
+            <th class="w-75">Stream</th>
             <th colspan="2">Actions</th>
         </tr>
     </thead>
@@ -39,18 +48,13 @@
                 <td>@Count</td>
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                 <td class="text-center">
-                    <a href="#" class="btn btn-primary" onclick="AddEditStream(@item.Id)"><i class="fa fa-pencil"></i> </a>
-                </td>
-                <td class="text-center">
-                    <form id="DeleteStreamForm" method="post">
-                        <a class="btn btn-danger btn-xs delete-button" href="/Shared/Stream/DeleteStream/@item.Id"><i class="fa fa-trash"></i></a>
+					<a href="#" onclick="AddEditStream(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a> 
+					</td>
+					<td class="text-center">
+                        <form id="DeleteStreamForm" method="post">
+					<a  href="/Shared/Stream/DeleteStream/@item.Id" ><i class="fa fa-trash delete-icon"></i></a>
                     </form>
-                    @*					@using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
-                        {
-
-                        }*@
-                    @*<a class="btn btn-danger btn-xs delete-button" href="/Shared/Stream/DeleteStream/@item.Id"><i class="fa fa-trash"></i></a>*@
-                </td>
+				</td>
             </tr>
             Count += 1;
         }
