--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -5,6 +5,15 @@
 }
 
 <style>
+				    .delete-icon {
+        color: red;
+        font-size: x-large;
+    }
+
+    .edit-icon {
+        color: #00239B;
+        font-size: x-large;
+    }
 	.btn-add-gradient {
     background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
     border-radius: 4px;
@@ -43,15 +52,14 @@
 				<td>@Html.DisplayFor(modelItem => item.Name)</td>
 				<td>@Html.DisplayFor(modelItem => item.ReferenceURL)</td>
 
-				<td class="text-center">
-					<a href="#" class="btn btn-primary" onclick="AddEditTopic(@item.Id)"><i class="fa fa-pencil"></i></a> 
-				</td>
+
+
+
+								<td class="text-center">
+					<a href="#" onclick="AddEditTopic(@item.Id)" ><i class="fa fa-pencil edit-icon"></i></a> 
+					</td>
 					<td class="text-center">
-					<a class="btn btn-danger btn-xs delete-button" href="/Shared/Topics/DeleteTopic/@item.Id"><i class="fa fa-trash"></i></a>
-					@*  @using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
-						{
-						<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete @item.Id');"><i class="fa fa-trash"></i> Delete</button>
-						}*@
+					<a  href="/Shared/Topics/DeleteTopic/@item.Id" ><i class="fa fa-trash delete-icon"></i></a>
 				</td>
 			</tr>
 			Count += 1;
