separate file user.js for manageuser, saveuser javascript

--- a/iTrainee.MVC/Areas/Shared/Views/UserTopics/AddEditUserTopics.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/UserTopics/AddEditUserTopics.cshtml
@@ -10,14 +10,14 @@
         @using (Html.BeginForm())
         {
             <div class="form-group">
-		<label class="col-form-label">Trainees</label><br />
-		@Html.ListBoxFor(model=>model.TraineeList, new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectMentor", @class = "form-control", multiple="multiple" })
-	    </div>
+                <label class="col-form-label">Trainees</label><br />
+                @Html.ListBoxFor(model=>model.TraineeList, new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectMentor", @class = "form-control", multiple="multiple" })
+            </div>
 
-                <ul class="treeview">
-            @foreach (var topic in Model.TopicsList)
-            {
-                                    <li id="li_1" class="contains-items">
+            <ul class="treeview">
+                @foreach (var topic in Model.TopicsList)
+                {
+                    <li id="li_1" class="contains-items">
 
                         <div class="checkbox">
                             <input type="checkbox">
@@ -34,10 +34,10 @@
                                 </li>
                             }
                         </ul>
-                     </li>
+                    </li>
 
-            }
-                </ul>
+                }
+            </ul>
 
             <div class="form-group">
                 <div class="col-lg-9"></div>
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-    <script>
+<script>
                 $('input[type=checkbox]').change(function(){
             // if is checked
             if(this.checked){
@@ -72,4 +72,59 @@
             $(this).closest('ul').siblings().find(':checkbox').prop('checked', false);
         }
     });
+          void Check_Clicked(Object sender, EventArgs e) 
+      {
+
+         Message.Text = "Selected Item(s):<br /><br />";
+
+         // Iterate through the Items collection of the CheckBoxList 
+         // control and display the selected items.
+         for (int i=0; i<checkboxlist1.Items.Count; i++)
+         {
+
+            if (checkboxlist1.Items[i].Selected)
+            {
+
+               Message.Text += checkboxlist1.Items[i].Text + "<br />";
+
+            }
+
+         }
+
+      }
 </script>
+
+
+ <form id="form1" runat="server">
+ 
+      <h3> CheckBoxList Example </h3>
+
+      Select items from the CheckBoxList.
+
+      <br /><br />
+
+      <asp:CheckBoxList id="checkboxlist1" 
+           AutoPostBack="True"
+           CellPadding="5"
+           CellSpacing="5"
+           RepeatColumns="2"
+           RepeatDirection="Vertical"
+           RepeatLayout="Flow"
+           TextAlign="Right"
+           OnSelectedIndexChanged="Check_Clicked"
+           runat="server">
+ 
+         <asp:ListItem>Item 1</asp:ListItem>
+         <asp:ListItem>Item 2</asp:ListItem>
+         <asp:ListItem>Item 3</asp:ListItem>
+         <asp:ListItem>Item 4</asp:ListItem>
+         <asp:ListItem>Item 5</asp:ListItem>
+         <asp:ListItem>Item 6</asp:ListItem>
+ 
+      </asp:CheckBoxList>
+ 
+      <br /><br />
+
+      <asp:label id="Message" runat="server" AssociatedControlID="checkboxlist1"/>
+             
+   </form>
