--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -81,34 +81,4 @@
     </div>
 </div>
 
-
-@section scripts {
-<script type="text/javascript">
-
-    var GetUser = function (id) {
-        var UserPath = "/Admin/Home/SaveUser?Id=" + id;
-        $("#myModalBodyDiv1").load(UserPath, function () {
-            $("#myModal1").modal("show");
-        });
-    };
-
-    $('#delete').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget)
-            var id = button.data('id-to-delete')
-
-                    $('#delete-yes-button').on('click', function () {
-                        $.ajax({
-                            url: "/Admin/Home/DeleteUser/" + id,
-                            type: "DELETE",
-                            success: function () {
-                                $("#myModal1").modal("hide");
-                                alert("Data saved successfully");
-                            },
-                            error: function () {
-                                alert("Unable to delete data");
-                            },
-                        })
-                    })
-        })
-</script>
-}
+<script src="/js/user.js"></script>
