Implementing Trainee Dashboard

--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -1,155 +1,155 @@
 @model iTrainee.Models.UserAudit;
 @{
-    ViewData["Title"] = "Trainee";
+	ViewData["Title"] = "Trainee";
 }
 
 <head>
-    <style>
-        .calendar{
-          position: relative;
-          width: 160px;
-        }
+	<style>
+		.calendar {
+			position: relative;
+			width: 160px;
+		}
 
-        .calendar .calendar-body{
-          display: flex;
-          margin-top: 3px;
-          align-items: center;
-          flex-direction: column;
-          width: 60%;
-          border-bottom: 6px solid #0366d6;
-          border-right: 3px solid #0366d6;
-          border-left: 3px solid #0366d6;
-          border-radius: 8px;
-          background: #fff;
-        }
+			.calendar .calendar-body {
+				display: flex;
+				margin-top: 3px;
+				align-items: center;
+				flex-direction: column;
+				width: 60%;
+				border-bottom: 6px solid #0366d6;
+				border-right: 3px solid #0366d6;
+				border-left: 3px solid #0366d6;
+				border-radius: 8px;
+				background: #fff;
+			}
 
-        .calendar .calendar-body .month-name{
-          color: #fff;
-          background: #0366d6;
-          width: 100%;
-          font-size: 1.0em;
-          text-align: center;
-          font-weight: 400;
-          border-top-left-radius: 6px;
-          border-top-right-radius: 6px;
-        }
+				.calendar .calendar-body .month-name {
+					color: #fff;
+					background: #0366d6;
+					width: 100%;
+					font-size: 1.0em;
+					text-align: center;
+					font-weight: 400;
+					border-top-left-radius: 6px;
+					border-top-right-radius: 6px;
+				}
 
-        .calendar .calendar-body .day-name{
-          color: #051320;
-          font-size: 0.9em;
-          font-weight: 400;
-          margin-top: 5px;
-        }
+				.calendar .calendar-body .day-name {
+					color: #051320;
+					font-size: 0.9em;
+					font-weight: 400;
+					margin-top: 5px;
+				}
 
-        .calendar .calendar-body .date-number{
-          color: #051320;
-          font-size: 1.3em;
-          font-weight: 600;
-          line-height: 1.0em;
-        }
+				.calendar .calendar-body .date-number {
+					color: #051320;
+					font-size: 1.3em;
+					font-weight: 600;
+					line-height: 1.0em;
+				}
 
-        .calendar .calendar-body .year{
-          color: #051320;
-          font-size: 0.9em;
-          font-weight: 400;
-          margin-bottom: 2px;
-        }
+				.calendar .calendar-body .year {
+					color: #051320;
+					font-size: 0.9em;
+					font-weight: 400;
+					margin-bottom: 2px;
+				}
 
-        .time {
-          font-size: 1.1em;
-          border-bottom: 6px solid #0366d6;
-          border-top: 6px solid #0366d6;
-          border-right: 3px solid #0366d6;
-          border-left: 3px solid #0366d6;
-          border-radius: 8px;
-          margin-top: 8px;
-          padding: 5px;
-        }
+		.time {
+			font-size: 1.1em;
+			border-bottom: 6px solid #0366d6;
+			border-top: 6px solid #0366d6;
+			border-right: 3px solid #0366d6;
+			border-left: 3px solid #0366d6;
+			border-radius: 8px;
+			margin-top: 8px;
+			padding: 5px;
+		}
 
-        .date {
-          font-size: 1.1em;
-          border-bottom: 6px solid #0366d6;
-          border-top: 6px solid #0366d6;
-          border-right: 3px solid #0366d6;
-          border-left: 3px solid #0366d6;
-          border-radius: 8px;
-          padding: 5px;
-          margin-top: 20px;
-          margin-right:44em;
-        }
-    </style>
+		.date {
+			font-size: 1.1em;
+			border-bottom: 6px solid #0366d6;
+			border-top: 6px solid #0366d6;
+			border-right: 3px solid #0366d6;
+			border-left: 3px solid #0366d6;
+			border-radius: 8px;
+			padding: 5px;
+			margin-top: 20px;
+			margin-right: 44em;
+		}
+	</style>
 </head>
 
 <div class="row mt-3">
-    @if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
-    {
-        <h2 class="font-weight-bold mt-4 mb-5">Hello @TempData["UserFirstName"],</h2>
-    }
+	@if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
+	{
+		<h2 class="font-weight-bold mt-4 mb-5">Hello @TempData["UserFirstName"],</h2>
+	}
 
-    @if (Convert.ToString(TempData["FirstName"]) == "MentorName")
-    {
-        <div class="col">
-            <p class="date">Date : @Model.Date.ToShortDateString()</p>
-        </div>
-        <div class="">
-            <p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
-            <p class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
-        </div>
-    }
-    else
-    {
-        <div class="col">
-            <div class="calendar float-right">
-                <div class="calendar-body">
-                    <span class="month-name">Month</span>
-                    <span class="day-name">Day</span>
-                    <span class="date-number">00</span>
-                    <span class="year">0000</span>
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
-            <p class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
-        </div>
-    }
+	@if (Convert.ToString(TempData["FirstName"]) == "MentorName")
+	{
+		<div class="col">
+			<p class="date">Date : @Model.Date.ToShortDateString()</p>
+		</div>
+		<div class="">
+			<p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
+			<p class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
+		</div>
+	}
+	else
+	{
+		<div class="col">
+			<div class="calendar float-right">
+				<div class="calendar-body">
+					<span class="month-name">Month</span>
+					<span class="day-name">Day</span>
+					<span class="date-number">00</span>
+					<span class="year">0000</span>
+				</div>
+			</div>
+		</div>
+		<div class="">
+			<p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
+			<p class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
+		</div>
+	}
 </div>
 
 
 <div class="col">
-    <div class="row">
-        <p>C# Basics</p>
-        <div class="progress" style="width: 75%">
-            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-    </div>
-    <div class="row">
-        <p>C# Advanced</p>
-        <div class="progress" style="width: 75%">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-    </div>
-    <div class="row">
-        <p>Console Application</p>
-        <div class="progress" style="width: 75%">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-        </div>
-    </div>
-    <p>Windows Application</p>
-    <p>MVC Application</p>
-    <p>Web Api Application</p>
+	@foreach (var topic in Model.AssignedTopicsList)
+	{
+		<div class="row">
+			<p>@topic.Name</p>
+			<div class="progress" style="width: 100%">
+				<div class="progress-bar" style="width: 75%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">75%</div>
+			</div>
+		</div>
+
+		<br />
+		@foreach (var subTopic in Model.AssignedSubTopicsList)
+		{
+			@if (topic.Id == subTopic.TopicId)
+			{
+				<p>@subTopic.Name</p>
+
+				<br />
+			}
+		}
+	}
+
 </div>
 
 <script type="text/javascript">
-    const dayNumber = new Date().getDate();
-    const year = new Date().getFullYear();
-    const dayName = new Date().toLocaleString("default", { weekday: "long" });
-    const monthName = new Date().toLocaleString("default", { month: "long" });
+	const dayNumber = new Date().getDate();
+	const year = new Date().getFullYear();
+	const dayName = new Date().toLocaleString("default", { weekday: "long" });
+	const monthName = new Date().toLocaleString("default", { month: "long" });
 
-    document.querySelector(".month-name").innerHTML = monthName;
-    document.querySelector(".day-name").innerHTML = dayName;
-    document.querySelector(".date-number").innerHTML = dayNumber;
-    document.querySelector(".year").innerHTML = year;
+	document.querySelector(".month-name").innerHTML = monthName;
+	document.querySelector(".day-name").innerHTML = dayName;
+	document.querySelector(".date-number").innerHTML = dayNumber;
+	document.querySelector(".year").innerHTML = year;
 </script>
 
 
