--- a/iTrainee.MVC/wwwroot/css/site.css
+++ b/iTrainee.MVC/wwwroot/css/site.css
@@ -126,3 +126,7 @@ body {
     transform: translateY(-6px);
     transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
 }
+
+.signInSignOut {
+    margin-top: 8px;
+}
