--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -91,9 +91,10 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">@ViewBag.Role Details</h3>
+                <h3 class="modal-title">Status</h3>
             </div>
             <div class="modal-body" id="myModalBodyDiv1">
+
             </div>
         </div>
     </div>
