Implementing daily progress update for trainee

--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -22,7 +22,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Profile</a>
                       
-	                   <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item btn btn-primary"> Change Password</a>
+	                   <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item"> Change Password</a>
 
                         <a class="dropdown-item" href="#">Sign Out</a>
                     </div>
