--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -274,7 +274,7 @@
         {
             @foreach (var subTopic in Model.AssignedSubTopicsList)
             {
-                @if (1 == subTopic.TopicId)
+                @if (topic.Id == subTopic.TopicId)
                 {
                     <div class="row mt-3">
                         <div class="col-8">
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <button data-toggle="modal" class="btn btn-sm mt-2 btn-status" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Add status</button>
+                            <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Update Progress</button>
                         </div>
                     </div>
                 }
@@ -309,18 +309,8 @@
 </div>
 
 <script type="text/javascript">
-    const dayNumber = new Date().getDate();
-    const year = new Date().getFullYear();
-    const dayName = new Date().toLocaleString("default", { weekday: "long" });
-    const monthName = new Date().toLocaleString("default", { month: "long" });
 
-    document.querySelector(".month-name").innerHTML = monthName;
-    document.querySelector(".day-name").innerHTML = dayName;
-    document.querySelector(".date-number").innerHTML = dayNumber;
-    document.querySelector(".year").innerHTML = year;
-
-
-    var GetDailyProgress = function (SubTopicId, UserId) {
+    function GetDailyProgress(SubTopicId, UserId) {
         var UserPath = "/Trainee/Home/UpdateDailyProgress?userId=" + UserId + "&subTopicId=" + SubTopicId;
         $("#myModalBodyDiv1").load(UserPath, function () {
             $("#myModal2").modal("show");
