Completed UI for Trainee Dashboard

--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -209,7 +209,7 @@
     </style>
 </head>
 
-<div class="row">
+<div class="row"  onload="GetSubTopicList(@Model.UserId, @Model.AssignedTopicsList.First().Id)">
     @if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
     {
         <h2 class="font-weight-bold mt-4 mb-5">Hello @TempData["UserFirstName"],</h2>
@@ -229,21 +229,6 @@
     }
     else
     {
-        @*<div class="col">
-            <div class="calendar float-right">
-            <div class="calendar-body">
-            <span class="month-name">Month</span>
-            <span class="day-name">Day</span>
-            <span class="date-number">00</span>
-            </div>
-            </div>
-            </div>*@
-        @* <div class="">
-            <p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
-            </div>
-            <div class="">
-            <p class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
-            </div> *@
     }
 </div>
 
@@ -251,47 +236,12 @@
     <div class="topic-list nav flex-column" id="Topic">
         @foreach (var topic in Model.AssignedTopicsList)
         {
-            <div class="topic-name nav-item">@topic.Name</div>
-            @*
-                @foreach (var subTopic in Model.AssignedSubTopicsList)
-                {
-                @if (topic.Id == subTopic.TopicId)
-                {
-                <p>@subTopic.Name</p>
-                <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Add status</button>
-                <br />
-                <div class="progress" style="width: 100%">
-                <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
-                </div>
-                }
-                }*@
+            <div class="topic-name nav-item" onclick="GetSubTopicList(@Model.UserId, @topic.Id)">@topic.Name</div>
         }
     </div>
 
 
-    <div class="subtopic-list">
-        @foreach (var topic in Model.AssignedTopicsList)
-        {
-            @foreach (var subTopic in Model.AssignedSubTopicsList)
-            {
-                @if (1 == subTopic.TopicId)
-                {
-                    <div class="row mt-3">
-                        <div class="col-8">
-
-                            <div class="d-inline">@subTopic.Name</div>
-                            <br />
-                            <div class="progress">
-                                <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <button data-toggle="modal" class="btn btn-sm mt-2 btn-status" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Add status</button>
-                        </div>
-                    </div>
-                }
-            }
-        }
+    <div class="subtopic-list" id="SubTopic">
     </div>
 </div>
 
@@ -309,16 +259,6 @@
 </div>
 
 <script type="text/javascript">
-    const dayNumber = new Date().getDate();
-    const year = new Date().getFullYear();
-    const dayName = new Date().toLocaleString("default", { weekday: "long" });
-    const monthName = new Date().toLocaleString("default", { month: "long" });
-
-    document.querySelector(".month-name").innerHTML = monthName;
-    document.querySelector(".day-name").innerHTML = dayName;
-    document.querySelector(".date-number").innerHTML = dayNumber;
-    document.querySelector(".year").innerHTML = year;
-
 
     var GetDailyProgress = function (SubTopicId, UserId) {
         var UserPath = "/Trainee/Home/UpdateDailyProgress?userId=" + UserId + "&subTopicId=" + SubTopicId;
@@ -327,8 +267,14 @@
         });
     };
 
-      $("#Topic").click(function () {
-      }
+
+        var GetSubTopicList = function (UserId, TopicId) {
+            debugger;
+        var UserPath = "/Trainee/Home/SubTopicList?topicId=" + TopicId + "&userId=" + UserId;
+                $("#SubTopic").load(UserPath, function () {
+                });
+
+    };
 
 </script>
 
