--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -41,7 +41,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="/Shared/Batch/ManageBatch">
+            <a href="/Shared/Batch/ManageBatch?userId=0">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Batch</h5>
