--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -5,7 +5,7 @@
 
 <head>
     <style>
-        .calendar {
+       /* .calendar {
             position: relative;
             width: 160px;
         }
@@ -89,16 +89,8 @@
                     font-size: 0.7em;
                     margin-bottom: 2px;
                 }
-
+*/
         .time {
-            font-size: 1.1em;
-            border-bottom: 6px solid #0366d6;
-            border-top: 6px solid #0366d6;
-            border-right: 3px solid #0366d6;
-            border-left: 3px solid #0366d6;
-            border-radius: 8px;
-            margin-top: 8px;
-            padding: 5px;
             font-size: 0.9em;
             border-bottom: 3px solid #0366d6;
             border-top: 3px solid #0366d6;
@@ -107,6 +99,7 @@
             border-radius: 5px;
             padding: 3px;
             margin-left: 50em;
+            margin-top: 20px;
         }
 
         .time1 {
@@ -118,6 +111,7 @@
             border-radius: 5px;
             padding: 3px;
             margin-left: 2em;
+            margin-top: 20px;
         }
 
         .dates {
@@ -128,18 +122,10 @@
             border-left: 1px solid #0366d6;
             border-radius: 5px;
             padding: 3px;
+            margin-top: 20px;
         }
 
-        .date {
-            font-size: 1.1em;
-            border-bottom: 6px solid #0366d6;
-            border-top: 6px solid #0366d6;
-            border-right: 3px solid #0366d6;
-            border-left: 3px solid #0366d6;
-            border-radius: 8px;
-            padding: 5px;
-            margin-top: 20px;
-            margin-right: 44em;
+        /*.date {
             font-size: 0.9em;
             border-bottom: 6px solid #0366d6;
             border-top: 6px solid #0366d6;
@@ -148,7 +134,8 @@
             border-radius: 8px;
             padding: 5px;
             margin-right: 44em;
-        }
+            
+        }*/
 
         .range-width {
             width: 460px;
@@ -252,7 +239,7 @@
         @foreach (var topic in Model.AssignedTopicsList)
         {
             <div class="topic-name nav-item">@topic.Name</div>
-            @*
+            
                 @foreach (var subTopic in Model.AssignedSubTopicsList)
                 {
                 @if (topic.Id == subTopic.TopicId)
@@ -264,7 +251,7 @@
                 <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
                 </div>
                 }
-                }*@
+                }
         }
     </div>
 
