--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -3,6 +3,12 @@
 }
 <link rel="stylesheet" href="/css/user.css">
 
+
+<div class="d-flex justify-content-between mt-4 ml-lg-5">
+	<h5 class="font-weight-bold dashboard-heading">Hello @TempData["UserFirstName"],</h5>
+</div>
+
+
 <div class="admin-dashboard-container">
     <div class="row row-cols-1 row-cols-md-2 g-4 admin-dashboard-row">
         <div class="col">
