--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Mentor";
 }
-
+<link rel="stylesheet" href="/css/user.css">
 
 <head>
 	<style>
@@ -38,22 +38,30 @@
 			transform: translateY(-6px);
 			transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
 		}
+
+		.dashboard-heading{
+    margin-left: 55px;
+}
+
+.dashboard-heading:hover {
+	cursor:default
+}
 	</style>
 </head>
 
 <div class="d-flex justify-content-between mt-4">
-	<h3>Hello Mentor,</h3>
+	<h4 class="font-weight-bold dashboard-heading">Hello @TempData["UserFirstName"],</h4>
 	<a href="/Shared/Batch/ManageBatch" class="btn btn-primary btn-add-gradient float-right mb-3"> Manage Batches</a>
 </div>
 
 
 <div class="admin-dashboard-container">
-	<div class="row row-cols-1 row-cols-md-2 g-4">
+	<div class="row row-cols-1 row-cols-md-2 g-lg-5">
 
 		@foreach (var item in Model)
 		{
-			<div class="col-3">
-				<div class="card mt-5">
+			<div class="col-2.5">
+				<div class="card mt-1">
 					<div class="card-body">
 						<h3 class="card-title mb-5">@item.Name</h3>
 						<div class="d-flex mt-1 mb-1">
