--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -5,91 +5,6 @@
 
 <head>
     <style>
-       /* .calendar {
-            position: relative;
-            width: 160px;
-        }
-
-            .calendar .calendar-body {
-                display: flex;
-                margin-top: 3px;
-                align-items: center;
-                flex-direction: column;
-                width: 60%;
-                border-bottom: 6px solid #0366d6;
-                border-right: 3px solid #0366d6;
-                border-left: 3px solid #0366d6;
-                border-radius: 8px;
-                background: #fff;
-            }
-
-            .calendar .calendar-body {
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                width: 40%;
-                border-bottom: 2px solid #0366d6;
-                border-right: 2px solid #0366d6;
-                border-left: 2px solid #0366d6;
-                border-radius: 8px;
-                background: #fff;
-                margin-left: 5em;
-            }
-
-                .calendar .calendar-body .month-name {
-                    color: #fff;
-                    background: #0366d6;
-                    width: 100%;
-                    font-size: 1.0em;
-                    text-align: center;
-                    font-weight: 400;
-                    border-top-left-radius: 6px;
-                    border-top-right-radius: 6px;
-                }
-
-                .calendar .calendar-body .month-name {
-                    color: #fff;
-                    background: #0366d6;
-                    width: 100%;
-                    font-size: 0.8em;
-                    text-align: center;
-                    border-top-left-radius: 6px;
-                    border-top-right-radius: 6px;
-                }
-
-                .calendar .calendar-body .day-name {
-                    color: #051320;
-                    font-size: 0.9em;
-                    font-weight: 400;
-                    margin-top: 5px;
-                }
-
-                .calendar .calendar-body .day-name {
-                    color: #051320;
-                    font-size: 0.7em;
-                    margin-top: 3px;
-                }
-
-                .calendar .calendar-body .date-number {
-                    color: #051320;
-                    font-size: 1.3em;
-                    font-weight: 600;
-                    line-height: 1.0em;
-                }
-
-                .calendar .calendar-body .year {
-                    color: #051320;
-                    font-size: 0.9em;
-                    font-weight: 400;
-                    margin-bottom: 2px;
-                }
-
-                .calendar .calendar-body .year {
-                    color: #051320;
-                    font-size: 0.7em;
-                    margin-bottom: 2px;
-                }
-*/
         .time {
             font-size: 0.9em;
             border-bottom: 3px solid #0366d6;
@@ -195,7 +110,6 @@
         }
     </style>
 </head>
-
 <div class="row"  onload="GetSubTopicList(@Model.UserId, @Model.AssignedTopicsList.First().Id)">
     @if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
     {
@@ -223,27 +137,13 @@
     <div class="topic-list nav flex-column" id="Topic">
         @foreach (var topic in Model.AssignedTopicsList)
         {
-            <div class="topic-name nav-item">@topic.Name</div>
-            
-                @foreach (var subTopic in Model.AssignedSubTopicsList)
-                {
-                @if (topic.Id == subTopic.TopicId)
-                {
-                <p>@subTopic.Name</p>
-                <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Add status</button>
-                <br />
-                <div class="progress" style="width: 100%">
-                <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
-                </div>
-                }
-                }
-        }
             <div class="topic-name nav-item" onclick="GetSubTopicList(@Model.UserId, @topic.Id)">@topic.Name</div>
         }
     </div>
 
 
-    <div class="subtopic-list" id="SubTopic">
+    <div class="subtopic-list px-3" id="SubTopic">
+       @await Html.PartialAsync("SubTopicList", @Model.AssignedSubTopicsList)
     </div>
 </div>
 
@@ -261,14 +161,6 @@
 </div>
 
 <script type="text/javascript">
-
-    var GetDailyProgress = function (SubTopicId, UserId) {
-        var UserPath = "/Trainee/Home/UpdateDailyProgress?userId=" + UserId + "&subTopicId=" + SubTopicId;
-        $("#myModalBodyDiv1").load(UserPath, function () {
-            $("#myModal2").modal("show");
-        });
-    };
-
 
         var GetSubTopicList = function (UserId, TopicId) {
             debugger;
