--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -223,27 +223,13 @@
     <div class="topic-list nav flex-column" id="Topic">
         @foreach (var topic in Model.AssignedTopicsList)
         {
-            <div class="topic-name nav-item">@topic.Name</div>
-            
-                @foreach (var subTopic in Model.AssignedSubTopicsList)
-                {
-                @if (topic.Id == subTopic.TopicId)
-                {
-                <p>@subTopic.Name</p>
-                <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetDailyProgress(@subTopic.Id, @Model.UserId)" data-target="#myModal2">Add status</button>
-                <br />
-                <div class="progress" style="width: 100%">
-                <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
-                </div>
-                }
-                }
-        }
             <div class="topic-name nav-item" onclick="GetSubTopicList(@Model.UserId, @topic.Id)">@topic.Name</div>
         }
     </div>
 
 
-    <div class="subtopic-list" id="SubTopic">
+    <div class="subtopic-list px-3" id="SubTopic">
+       
     </div>
 </div>
 
