--- a/iTrainee.MVC/Areas/Trainee/Views/Home/UpdateDailyProgress.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/UpdateDailyProgress.cshtml
@@ -2,26 +2,40 @@
 
 			<form id="ProgressForm" method="post">
                     
-                    <div class="row">
+                   
                         <div class="col-lg-12">
 			<div class="form-group">
                 <input type="hidden" class="form-control" name="UserId" value="@Model.UserId"  />
                 <input type="hidden" class="form-control" name="SubTopicId" value="@Model.SubTopicId"  />
 				<input type="hidden" class="form-control" name="UserAuditId" value="@Model.UserAuditId"  />
             </div>
+			 <div class="row">
+			  <div class="col-md-6">
 			<div class="form-group">
 				<label asp-for="StartDate" class="control-label">Start Date</label>
 				<input type="text" class="form-control" name="StartDate" value=@Model.StartDate disabled/>
 			</div>
-			<div class="form-group">
-				<label asp-for="EndDate" class="control-label">End Date</label>
-				<input type="text" class="form-control" name="EndDate" value=@Model.EndDate disabled/>
-			</div>
+			
 			<div class="form-group">
 				<label asp-for="Status" class="control-label">Status</label>
-				<input type="text" name="Status" class="form-control" />
+		        <select name="Status" class="form-control">
+				    <option></option>
+                    <option>In Progress</option>
+                    <option>Completed</option>
+                </select>
 			</div>
-			<div id="slider-cntnr">
+			
+			<div class="form-group">
+				<label asp-for="TraineeComments" class="control-label">Trainee Comments</label>
+				<textarea name="TraineeComments" value="@Model.TraineeComments" class="form-control" ></textarea>
+			</div>
+			</div>
+			 <div class="col-md-6">
+				 <div class="form-group">
+				 <label asp-for="EndDate" class="control-label">End Date</label>
+				  <input type="text" class="form-control" name="EndDate" value=@Model.EndDate disabled/>
+			 </div>
+			  <div id="slider-cntnr">
 				<label for="customRange1" class="form-label">Percentage</label>
 				<input type="range" id="frame-slider" class="range-width" name="Percentage" oninput="updateFollowerValue(this.value)" value=@Model.Percentage />
 				<div id="slider-follow">
@@ -29,21 +43,19 @@
 						<span id="slider-val"></span>
 					</div>
 				</div>
-			</div>
-			<div class="form-group mt-5">
-				<label asp-for="TraineeComments" class="control-label">Trainee Comments</label>
-				<input type="text" name="TraineeComments" value="@Model.TraineeComments" class="form-control"  />
-			</div>
-			<div class="form-group">
+			 </div>
+			
+			 <div class="form-group" style="margin-top:30px;">
 				<label asp-for="MentorComments" class="control-label">Mentor Comments</label>
-				<input name="MentorComments" type="text" value="@Model.MentorComments" class="form-control" disabled />
+				<textarea name="MentorComments" type="text" value="@Model.MentorComments" class="form-control" disabled></textarea>
+			 </div>
 			</div>
-
-
-			<div class="form-group">
+			</div>
+			 <div class="form-group mt-4 float-right">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<input type="submit" id="SaveProgress" value="Save" class="btn btn-primary" />
 			</div>
-			</div>
+			
 			</div>
 		</form>
 
