--- a/iTrainee.MVC/Areas/Trainee/Views/Home/SubTopicList.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/SubTopicList.cshtml
@@ -5,8 +5,8 @@
 </head>
 @foreach (var subTopic in Model)
 {
-    <div class="row mt-3">
-        <div class="col-9">
+    <div class="row mb-3">
+        <div class="col-10">
             <div class="d-inline">@subTopic.Name</div>
             <br />
             <div class="progress mt-2">
