--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -5,6 +5,47 @@
 
 <head>
     <style>
+
+        .time {
+            font-size: 1.1em;
+            border-bottom: 6px solid #0366d6;
+            border-top: 6px solid #0366d6;
+            border-right: 3px solid #0366d6;
+            border-left: 3px solid #0366d6;
+            border-radius: 8px;
+            margin-top: 8px;
+            padding: 5px;
+            font-size: 0.9em;
+            border-bottom: 3px solid #0366d6;
+            border-top: 3px solid #0366d6;
+            border-right: 1px solid #0366d6;
+            border-left: 1px solid #0366d6;
+            border-radius: 5px;
+            padding: 3px;
+            margin-left: 50em;
+        }
+
+        .time1 {
+            font-size: 0.9em;
+            border-bottom: 3px solid #0366d6;
+            border-top: 3px solid #0366d6;
+            border-right: 1px solid #0366d6;
+            border-left: 1px solid #0366d6;
+            border-radius: 5px;
+            padding: 3px;
+            margin-left: 2em;
+        }
+
+        .dates {
+            font-size: 0.9em;
+            border-bottom: 3px solid #0366d6;
+            border-top: 3px solid #0366d6;
+            border-right: 1px solid #0366d6;
+            border-left: 1px solid #0366d6;
+            border-radius: 5px;
+            padding: 3px;
+        }
+
         .range-width {
             width: 460px;
         }
@@ -58,11 +99,13 @@
         }
 
         .topic-list {
-            flex: 2;
+            flex: 1.5;
         }
 
         .subtopic-list {
             flex: 4;
+            margin-left: 25px;
+            box-shadow: inset 14px 0 5px -12px #002eca;
         }
 
         .btn-status, .btn-status:hover {
@@ -111,7 +154,7 @@
     </div>
 
 
-    <div class="subtopic-list px-3" id="SubTopic">
+    <div class="subtopic-list px-4" id="SubTopic">
         @await Html.PartialAsync("SubTopicList", @Model.AssignedSubTopicsList)
     </div>
 </div>
