--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -1,4 +1,15 @@
-﻿<header>
+﻿@{
+    TempData.Keep("UserId");
+    TempData.Keep("UserFirstName");
+    TempData.Keep("HeaderRole");
+    TempData.Keep("UserToken");
+    TempData.Keep("StreamId");
+    TempData.Keep("SubTopicId");
+    TempData.Keep("TopicId");
+    TempData.Keep("Role");
+}
+
+<header>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bg-custom-light">
         <div>
             <img src="\css\logo.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
@@ -87,7 +98,7 @@
                     @if (TempData["HeaderRole"].Equals("Mentor"))
                     {
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="/Mentor/Home/Index/@TempData["UserId"]"><i class="fa fa-home" aria-hidden="true"></i></a>
+                            <a class="nav-link text-white" href="/Mentor/Home/Index"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageStreams">Stream</a>
