--- a/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
 
 <div class="d-flex justify-content-between mt-4">
 	<h4 class="font-weight-bold dashboard-heading">Hello @TempData["UserFirstName"],</h4>
-	<a href="/Shared/Batch/ManageBatch" class="btn btn-primary btn-add-gradient float-right mb-3"> Manage Batches</a>
+	<a href="/Shared/Batch/ManageBatch?userId=@TempData["UserId"]" class="btn btn-primary btn-add-gradient float-right mb-3"> Manage Batches</a>
 </div>
 
 
