--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -22,13 +22,13 @@
 </div>
 
 <table class="table table-hover table-bordered">
-    <tr class="text-center">
+    <tr>
         <th>S.No</th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>DOB</th>
         <th>Qualification</th>
-        <th colspan="2">Actions</th>
+        <th class="text-center" colspan="2">Actions</th>
     </tr>
     @{
         int Count = 1;
@@ -51,16 +51,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Qualification)
             </td>
-            <td>
                 @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")) ){
-                    @Html.ActionLink("View Progress", "Index","Home",new {Area = "Trainee" ,userId = item.Id, auditId = 0})
+                    <td class="text-center">
+                     <a href="@Url.Action("Index","Home",new {Area = "Trainee" ,userId = item.Id, auditId = 0})">
+                     <i class="fa fa-eye fa-lg"></i>
+                     </a>
+                     </td>
                 }
                 else
                 {
+                    <td class="text-center">
                     <a id="ediit" onclick="GetUser(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
+                    </td>
+                    <td class="text-center">
                     <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+                    </td>
                 }
-            </td>
         </tr>
         Count += 1;
     }
