--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -31,12 +31,12 @@
 
 <table class="table table-hover table-bordered">
     <thead>
-        <tr class="text-center">
+        <tr>
             <th>S.No</th>
             <th>Topic</th>
             <th>Sub Topic</th>
             <th>Reference URL</th>
-            <th  colspan="2">Actions</th>
+            <th class="text-center" colspan="2">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -83,7 +83,7 @@
 </div>
 
 <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
