--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -32,12 +32,12 @@
 
 <table class="table table-hover table-bordered">
 	<thead>
-		<tr class="text-center">
+		<tr>
 			<th>S.No</th>
 			<th>Stream</th>
 			<th>Topic</th>
 			<th>Referenece URL</th>
-			<th colspan="2">Actions</th>
+			<th  class="text-center" colspan="2">Actions</th>
 		</tr>
 	</thead>
 	<tbody>
