--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -8,6 +8,7 @@
 				<input type="text" class="form-control" name="Name" value="@Model.Name" />
 			</div>
 			<div class="form-group mt-4 float-right">
+				 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<input id="btnStreamSave" type="submit" value="Save" class="btn btn-primary mr-3" />
 			</div>
 		</form>
