--- a/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
@@ -24,6 +24,7 @@
 				</div>
 			</div>
 			<div class="form-group mt-4 float-right">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<input id="btnSubTopicSave" type="submit" value="Save" class="btn btn-primary mr-3" />
 			</div>
 		</form>
